# Lapathon

./: .gitignore  README.md  docker-compose.yaml  main.ipynb  pyproject.toml
agent/: agent.py  (+5 more)
ingestion_job/: README.md  debug_output.txt  main.py  pyproject.toml
ingestion_job/app/: main.py
ingestion_job/app/core/: settings.py
ingestion_job/app/models/: mongo.py  schemas.py
ingestion_job/app/services/: pipeline.py
ingestion_job/app/services/canonical/: adapter_json.py  adapter_xml.py  base.py  service.py
ingestion_job/app/services/schema/: backend_mongo.py  service.py  utils.py
ingestion_job/app/services/sinks/: mongo_store.py
ingestion_job/app/services/storage/: minio_client.py
ingestion_job/docs/: Ingestion Service Spec - Data Parsing Review.md  SYSTEM_HANDOFF.md  doc.md  schemas.md
ingestion_job/docs/proposed_neo4j/: lables.json  neo4j_query_table_data_2026-1-17.json  nodes.json  properties.json  relations.json  schema_descriptions.json
ingestion_job/scripts/: analyze_data_coverage.py  analyze_proposed_schema.py  analyze_quarantine.py  check_all_labels.py  check_images.py  check_metrics.py  check_results.py  debug_canonical.py  debug_match.py  debug_quarantine.py  init_mongo_schemas.py  init_schemas.py  inspect_quarantine_file.py  inspect_schemas.py  new_nabu_to_csv_2.py  reproduce_canonical.py  reset_db.py  run_batch.py  test_mongo.py  verify_schema_expansion.py
schema_updater/: .env.example  README.md  main.py  pyproject.toml
schema_updater/app/core/: settings.py
schema_updater/app/models/: schema.py
schema_updater/app/tools/: utils.py
(+93 files in other folders)
